--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -16,8 +16,10 @@
         <label class="col-sm-1 control-label">Country</label>
         <div class="col-sm-10">
           <select name="Country" class="form-control">
-            <option>Brazil</option>
-            <option>Sweden</option>
+            @foreach (var item in @ViewBag.CountryList)
+            {
+              <option>@item.CountryID</option>
+            }
           </select>
         </div>
       </div>
