--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -15,10 +15,10 @@
       <div class="form-group">
         <label class="col-sm-1 control-label">Country</label>
         <div class="col-sm-10">
-          <select name="Country" class="form-control">
+          <select name="CountryID" class="form-control">
             @foreach (var item in @ViewBag.CountryList)
             {
-              <option>@item.CountryID</option>
+              <option value="@item.CountryID">@item.Name</option>
             }
           </select>
         </div>
@@ -46,7 +46,7 @@
         <a asp-action="Details" asp-controller="Client" asp-route-id="@item.ClientID">
           <tr>          
             <td>@item.Name</td>
-            <td>@item.Country</td> 
+            <td>@item.Country.Name</td> 
             <td>
               <button type="button" class="btn btn-default btn-xs" data-id="@item.ClientID">
                 <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
