--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -48,7 +48,7 @@
             <td>@item.Name</td>
             <td>@item.Country.Name</td> 
             <td>
-              <input type="submit" class="btn btn-default btn-xs" value="Edit" />
+              <input type="button" class="btn btn-default btn-xs" value="Edit" data-toggle="modal" data-client-id="@item.ClientID" data-client-name="@item.Name" data-country-id="@item.CountryID" data-target="#ClientModal"/>
               <input type="button" class="btn btn-default btn-xs" value="Delete" onclick="location.href='@Url.Action("Delete", "Client", new {clientID = @item.ClientID}, null)'" />
             </td>
           </tr>  
@@ -58,3 +58,64 @@
   </div>
   </div>
 </div>
+
+<div id="ClientModal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Update User</h4>
+      </div>
+      <div class="modal-body">
+        <form class="form-horizontal" asp-action="Update" asp-controller="Client">
+            <div class="form-group">
+                <div class="col-sm-10">
+                    <input name="ClientID" id="ClientID" class="form-control" type="hidden" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Name</label>
+                <div class="col-sm-10">
+                    <input name="Name" id="Name" class="form-control" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Country</label>
+                <div class="col-sm-10">
+                    <select name="CountryID" id="CountryID" class="form-control" />
+                      @foreach (var item in @ViewBag.CountryList)
+                      {
+                        <option value=@item.CountryID id="CountryID_@item.CountryID">@item.Name</option>
+                      }
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-offset-2 col-sm-10">
+                  <button type="submit" class="btn btn-default">Save</button>
+              </div>
+            </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+@section Scripts {
+  <script type="text/javascript">
+    $("#ClientModal").on("show.bs.modal", function(e) {
+      // Get data about the client to update
+      var button = $(e.relatedTarget);
+      var clientID = button.data('client-id');
+      var clientName = button.data('client-name');
+      var countryID = button.data('country-id');
+      // Fill in the components with client data
+      var modal = $(this);
+      modal.find('.modal-body #ClientID').val(clientID);
+      modal.find('.modal-body #Name').val(clientName);
+      // Set the selected value of the select component
+      //modal.find('.modal-body #CountryID').val(countryID);
+      modal.find('.modal-body #CountryID_' + countryID).attr('selected', true);
+    })
+</script>
+}
