--- a/Views/Client/Index.cshtml
+++ b/Views/Client/Index.cshtml
@@ -48,8 +48,9 @@
             <td>@item.Name</td>
             <td>@item.Country.Name</td> 
             <td>
-              <input type="button" class="btn btn-default btn-xs" value="Edit" data-toggle="modal" data-client-id="@item.ClientID" data-client-name="@item.Name" data-country-id="@item.CountryID" data-target="#ClientModal"/>
-              <input type="button" class="btn btn-default btn-xs" value="Delete" onclick="location.href='@Url.Action("Delete", "Client", new {clientID = @item.ClientID}, null)'" />
+              <input type="button" class="btn btn-default btn-xs" value="Edit" data-toggle="modal" data-client-id="@item.ClientID" data-client-name="@item.Name" data-country-id="@item.CountryID" data-target="#UpdateModal"/>
+              <!---<input type="button" class="btn btn-default btn-xs" value="Delete" onclick="location.href='@Url.Action("Delete", "Client", new {clientID = @item.ClientID}, null)'" />-->
+              <input type="button" class="btn btn-default btn-xs" value="Delete" data-toggle="modal" data-client-id="@item.ClientID" data-client-name="@item.Name" data-target="#DeleteModal"/>
             </td>
           </tr>  
         </a>    
@@ -59,7 +60,7 @@
   </div>
 </div>
 
-<div id="ClientModal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog">
+<div id="UpdateModal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -101,9 +102,27 @@
   </div>
 </div>
 
+<div id="DeleteModal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Delete Client</h4>
+      </div>
+      <div class="modal-body">
+        <p id="messageDelete"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="confirmDelete" class="btn btn-danger">Yes</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">No</button>        
+      </div>
+    </div>
+  </div>
+</div>
+
 @section Scripts {
   <script type="text/javascript">
-    $("#ClientModal").on("show.bs.modal", function(e) {
+    $("#UpdateModal").on("show.bs.modal", function(e) {
       // Get data about the client to update
       var button = $(e.relatedTarget);
       var clientID = button.data('client-id');
@@ -114,8 +133,18 @@
       modal.find('.modal-body #ClientID').val(clientID);
       modal.find('.modal-body #Name').val(clientName);
       // Set the selected value of the select component
-      //modal.find('.modal-body #CountryID').val(countryID);
       modal.find('.modal-body #CountryID_' + countryID).attr('selected', true);
     })
+</script>
+<script type="text/javascript">
+  $('#DeleteModal').on('show.bs.modal', function(e) {
+    console.log("Delete Modal");
+    var button = $(e.relatedTarget);
+    var clientID = button.data('client-id');
+    var clientName = button.data('client-name');
+    var modal = $(this);
+    modal.find('.modal-body #messageDelete').text("Do you want to remove " + clientName + "?");
+    modal.find('.modal-footer #confirmDelete').attr('onclick', 'location.href="/Client/Delete/?clientID=' + clientID + '"');
+  });
 </script>
 }
